[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "diagsniff"
version     = "0.1.0"
description = "SSH-based packet capture CLI for FortiGate and FortiWeb"
readme      = "README.md"
license     = { text = "Apache-2.0" }
requires-python = ">=3.10"

keywords = ["fortinet", "fortigate", "fortiweb", "packet-capture", "sniffer", "network", "cli"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "paramiko>=3.4",
    "keyring>=24",
    "pydantic>=2.6",
    "cryptography>=42",    # Fernet for local credential fallback
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.scripts]
diagsniff = "diagsniff.cli:main"

[project.urls]
Repository = "https://github.com/your-org/diagsniff"
Issues     = "https://github.com/your-org/diagsniff/issues"

# ── Hatch build ───────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["diagsniff"]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select  = ["E", "F", "I", "UP", "B", "SIM"]
ignore  = ["E501"]    # line length handled by formatter

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version     = "3.10"
strict             = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"
log_cli     = true
log_level   = "WARNING"

[tool.coverage.run]
source   = ["diagsniff"]
omit     = ["diagsniff/tls_debug.py"]    # Isolated sensitive module

[tool.coverage.report]
show_missing = true
skip_empty   = true
